--- a/styleTest.css
+++ b/styleTest.css
@@ -63,3 +63,33 @@ div.showhidden p.defaulthidden {
 div.showhidden:hover p.defaulthidden {
     visibility: visible;
 }
+
+/* antn - using w3schools as a reference, here's some code that can slide a white solid
+over an image */
+.container {
+    position: relative;
+    width: 100%;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: white;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: 1s ease-in-out;
+}
+
+.container:hover .overlay {
+    bottom: 0;
+    height: 100%;
+  }
