--- a/styleTest.css
+++ b/styleTest.css
@@ -35,11 +35,11 @@ div.w {
     text-decoration-color: greenyellow;
 }
 
-/*meln made text stretched**/
+/*meln made text cool*/
 div.s {
     font-variant:small-caps;
     font-weight: 900;
-    text-decoration-color: deeppink;
+    color: deeppink;
 }
 
 /* antn - borrowing and modifying Mark's box because I liked it enough to try using it */
@@ -64,33 +64,3 @@ div.showhidden p.defaulthidden {
 div.showhidden:hover p.defaulthidden {
     visibility: visible;
 }
-
-/* antn - using w3schools as a reference, here's some code that can slide a white solid
-over an image */
-.container {
-    position: relative;
-    width: 100%;
-}
-
-.image {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-.overlay {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    right: 0;
-    background-color: white;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: 1s ease-in-out;
-}
-
-.container:hover .overlay {
-    bottom: 0;
-    height: 100%;
-  }
