--- a/styleTest.css
+++ b/styleTest.css
@@ -1,8 +1,8 @@
 /* antn - making all of the paragraph text on the page a certain color */
-/*p {
+p {
     color: crimson;
     text-align: center;
-}*/
+}
 
 /* antn - making two different header classes with different alignments and different colors */
 h1.rightblue {
@@ -118,5 +118,17 @@ over an image and add some text */
     background: rgba(200, 200, 255, .7);
     border-radius: 15px;
     padding: 2px;
+}
+/* meln- an image container to make grids with images, images are faced until hovered*/
+.img-container {
+    float: left;
+    width: 33%;
+    padding: 5px;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.img-container:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
 
